--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -8,9 +8,6 @@
   width: 100%;
   padding: 4rem 0;
   color: white;
-  text-align: center;
-  position: relative;
-  display: flex;
   overflow: hidden;
   background: rgb(21, 33, 107);
   background-image: url(../../static/img/homepage/hero-image.jpg);
@@ -31,10 +28,6 @@ html[data-theme='dark'] {
   font-style: normal;
   font-weight: 700;
   font-size: 120px;
-  position: absolute;
-  top: 54px;
-  left: 146px;
-  display: flex;
 }
 
 .heroBanner h2 {
@@ -42,13 +35,9 @@ html[data-theme='dark'] {
   font-style: normal;
   font-weight: 300;
   font-size: 20px;
-  position: absolute;
-  top: 203px;
-  left: 155px;
   width: 473px;
   height: 60px;
   text-align: left;
-  display: flex;
 }
 
 @media screen and (max-width: 966px) {
@@ -68,15 +57,9 @@ html[data-theme='dark'] {
 }
 
 .buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-shadow: none;
-  position: absolute;
   width: 251px;
   height: 50px;
-  top: 282px;
-  left: 170px;
   border-radius: 10px;
 }
 
@@ -103,30 +86,20 @@ html[data-theme='dark'] {
   text-align: left;
   width: 100%;
 }
-
+/* 
 .subButtons {
   display: flex;
-  align-items: right;
-  justify-content: right;
-  flex-flow: row wrap;
-  width: 100%;
   padding: 0 10px;
   position: relative;
   overflow: hidden;
   background: #131419;
-  height: 85px;
-}
+} */
 
 .subButtonsText {
   font-family: 'Nunito Sans', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 24px;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  flex-direction: column;
-  text-align: left;
 }
 
 /* .subButtonsText b {
@@ -190,6 +163,7 @@ html[data-theme='dark'] {
 
 .githubButton:hover {
   background-color: #414c5c;
+  cursor: pointer;
 }
 
 /* .col {
